--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                               <div class="form-group col-md-3">
                                 <label for="inputState">From</label>
                                 <select id="inputState" class="form-control">
-                                  <option selected>Choose...</option>
+                                  <option selected disabled>Choose...</option>
                                   <option>...</option>
                                 </select>
                               </div>
@@ -32,7 +32,7 @@
                                 <input type="text" class="form-control" id="inputZip">
                               </div>
                               <div class="form-group col-md-3">
-                                <label for="inputZip" class="text-center z-index-3" >Coonvert</label>
+                                <label for="inputZip" class="text-center" style="position: relative; z-index: -100;">Coonvert</label>
                                 <input type="submit" class="form-control btn btn-primary " id="">
                               </div>
                             </div>
