--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>Currency Conversion</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     
@@ -34,13 +35,13 @@
                               </div>
                             </div>
                           </form>
-                          <div class="text-center mt-1 mb-5" id="display-result">
-                            
-                          </div>
+                          <div class="spinner d-none"></div>
+                          <div class="text-center mt-1 mb-5"  id="display-result"></div>
                     </div>
                   </div>
             </div>
         </div>
+
     </div>
 
 
